<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_stories"
        android:icon="@drawable/ic_stories"
        android:title="@string/title_stories" />

    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/ic_chats"
        android:title="@string/title_chats" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_gray_24dp"
        android:title="@string/title_profile" />

</menu>
